# work-qgc

android/: AndroidManifest.xml
android/src/org/hcnetsdk/jna/: HCNetSDKByJNA.java  HCNetSDKJNAInstance.java  HCNetSDKJNAWrapper.java
src/: QGCApplication.cc  QGCApplication.h
src/Android/: CMakeLists.txt
src/Android/HCNetSDK/: AndroidHCNetSDKInterface.cc  AndroidHCNetSDKInterface.h  CMakeLists.txt
src/FlightDisplay/: FlyView.qml  FlyViewVideo.qml
src/QmlControls/: FlightModeIndicator.qml  QGroundControlQmlGlobal.cc  QGroundControlQmlGlobal.h
src/Settings/: Video.SettingsGroup.json  VideoSettings.cc  VideoSettings.h
src/UI/AppSettings/: VideoSettings.qml
src/Vehicle/VehicleSetup/: JoystickConfigButtons.qml
src/VideoManager/VideoReceiver/GStreamer/: GStreamer.cc
tools/translations/: dict_base.py  dict_ru_RU.py  dict_zh_CN.py  qgc_translate.py
translations/: qgc-json.ts  qgc.ts  qgc_json_ru_RU.ts  qgc_json_ru_RU.ts_missing.txt  qgc_json_zh_CN.ts  qgc_json_zh_CN.ts_missing.txt  qgc_source_ru_RU.ts  qgc_source_ru_RU.ts_missing.txt  qgc_source_zh_CN.ts  qgc_source_zh_CN.ts_missing.txt
